Add launcher icon and label. Show versions in unlocked package list.

--- a/au.org.libraryforall.launcher.app/src/main/res/values/strings.xml
+++ b/au.org.libraryforall.launcher.app/src/main/res/values/strings.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <resources>
+  <string name="launcherAppName">LFA Launcher</string>
   <string-array name="launcherPackageWhitelist">
     <item>au.org.libraryforall.reader</item>
     <item>au.org.libraryforall.reader.offline</item>
   </string-array>
   <string name="launcherTitleLocked">Select An Application</string>
-  <string name="launcherTitleUnlocked">Unlocked Package List</string>
+  <string name="launcherTitleUnlocked">Unlocked Application List</string>
 </resources>
