Add more applications to the whitelist

--- a/au.org.libraryforall.launcher.app/src/main/res/values/strings.xml
+++ b/au.org.libraryforall.launcher.app/src/main/res/values/strings.xml
@@ -2,7 +2,8 @@
 <resources>
   <string name="launcherAppName">LFA Launcher</string>
   <string-array name="launcherPackageWhitelist">
-    <item>au.org.libraryforall.reader.laos</item>
+    <item>one.lfa.android.laos</item>
+    <item>one.lfa.android.grande</item>
     <item>au.org.libraryforall.reader.offline</item>
     <item>au.org.libraryforall.reader</item>
     <item>au.org.libraryforall.updater.app</item>
