Whitelisting two new apps.

--- a/au.org.libraryforall.launcher.inclusiv/src/main/res/values/strings.xml
+++ b/au.org.libraryforall.launcher.inclusiv/src/main/res/values/strings.xml
@@ -9,5 +9,7 @@
     <item>one.lfa.android.laos</item>
     <item>one.lfa.android.timor</item>
     <item>org.sil.bloom.reader</item>
+    <item>com.moodle.moodlemobile</item>
+    <item>mobi.abcmouse.academy_goo</item>
   </string-array>
 </resources>
