--- a/au.org.libraryforall.launcher.main/src/main/res/values/strings.xml
+++ b/au.org.libraryforall.launcher.main/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <item>au.org.libraryforall.reader.offline</item>
     <item>au.org.libraryforall.reader</item>
     <item>au.org.libraryforall.updater.app</item>
+    <item>org.libraryforall.lfateacherdashboard</item>
     <item>one.lfa.android.grande</item>
     <item>one.lfa.android.laos</item>
     <item>one.lfa.android.timor</item>
