Add custom On/Offline App Titles to the Student and Teacher launchers

--- a/au.org.libraryforall.launcher.inclusiv/src/main/res/values/strings.xml
+++ b/au.org.libraryforall.launcher.inclusiv/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <item>com.moodle.moodlemobile</item>
     <item>mobi.abcmouse.academy_goo</item>
   </string-array>
+  <string name="launcherTitleLocked">Offline Tablet - Students</string>
 </resources>
