--- a/au.org.libraryforall.launcher.inclusiv_teacher/src/main/res/values/strings.xml
+++ b/au.org.libraryforall.launcher.inclusiv_teacher/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <item>mobi.abcmouse.academy_goo</item>
     <item>com.android.chrome</item>
   </string-array>
+  <string name="launcherTitleLocked">Online Tablet - Teachers</string>
 </resources>
