Add to App whitelist for Teacher Devices
Adds:
* Calculator
* Desk Clock
* File Browsing
* OpenDocument reader

--- a/au.org.libraryforall.launcher.inclusiv_teacher/src/main/res/values/strings.xml
+++ b/au.org.libraryforall.launcher.inclusiv_teacher/src/main/res/values/strings.xml
@@ -12,6 +12,10 @@
     <item>com.moodle.moodlemobile</item>
     <item>mobi.abcmouse.academy_goo</item>
     <item>com.android.chrome</item>
+    <item>com.google.android.calculator</item>
+    <item>com.google.android.deskclock</item>
+    <item>com.google.android.apps.nbu.files</item>
+    <item>at.tomtasche.reader</item>
   </string-array>
   <string name="launcherTitleLocked">Online Tablet - Teachers</string>
 </resources>
