--- a/au.org.libraryforall.launcher.main/src/main/res/values/strings.xml
+++ b/au.org.libraryforall.launcher.main/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <item>one.lfa.android.grande</item>
     <item>one.lfa.android.laos</item>
     <item>one.lfa.android.timor</item>
+    <item>one.lfa.android.ethiopia</item>
   </string-array>
   <string name="launcherTitleLocked">Select An Application</string>
   <string name="launcherTitleUnlocked">Unlocked Application List</string>
