Add Elevate to the whitelist so that it shows up on installed app adapter

--- a/au.org.libraryforall.launcher.app/src/main/res/values/strings.xml
+++ b/au.org.libraryforall.launcher.app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
   <string-array name="launcherPackageWhitelist">
     <item>au.org.libraryforall.reader</item>
     <item>au.org.libraryforall.reader.offline</item>
+    <item>au.org.libraryforall.elevate.launcher</item>
   </string-array>
   <string name="launcherTitleLocked">Select An Application</string>
   <string name="launcherTitleUnlocked">Unlocked Application List</string>
