Add the Student Dashboard to the list of allowed apps

--- a/au.org.libraryforall.launcher.main/src/main/res/values/strings.xml
+++ b/au.org.libraryforall.launcher.main/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <item>one.lfa.android.app.indigenous</item>
     <item>org.libraryforall.accountsconverter</item>
     <item>org.libraryforall.lfateacherdashboard</item>
+    <item>org.libraryforall.lfastudentdashboard</item>
     <item>org.libraryforall.lfatrainingapp</item>
   </string-array>
   <string name="launcherTitleLocked">Select An Application</string>
