--- a/au.org.libraryforall.launcher.main/src/main/res/values/strings.xml
+++ b/au.org.libraryforall.launcher.main/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
   <string name="launcherAppName">LFA Launcher</string>
   <string-array name="launcherPackageWhitelist">
     <item>au.org.libraryforall.elevate.launcher</item>
+    <item>au.org.libraryforall.feedthemonster.english</item>
     <item>au.org.libraryforall.reader.offline</item>
     <item>au.org.libraryforall.reader</item>
     <item>au.org.libraryforall.updater.app</item>
