--- a/au.org.libraryforall.launcher.main/src/main/res/values/strings.xml
+++ b/au.org.libraryforall.launcher.main/src/main/res/values/strings.xml
@@ -12,6 +12,8 @@
     <item>one.lfa.android.timor</item>
     <item>one.lfa.android.ethiopia</item>
     <item>one.lfa.android.app.indigenous</item>
+    <item>one.lfa.android.app.solomon</item>
+    <item>one.lfa.android.app.kenya</item>
     <item>org.libraryforall.accountsconverter</item>
     <item>org.libraryforall.lfateacherdashboard</item>
     <item>org.libraryforall.lfastudentdashboard</item>
