Add Myanmar Student Dashboard to whitelist

--- a/au.org.libraryforall.launcher.main/src/main/res/values/strings.xml
+++ b/au.org.libraryforall.launcher.main/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <item>org.libraryforall.lfateacherdashboard.vietnam</item>
     <item>org.libraryforall.lfastudentdashboard</item>
     <item>org.libraryforall.lfastudentdashboard.vietnam</item>
+    <item>org.libraryforall.lfastudentdashboard.myanmar</item>
     <item>org.libraryforall.lfatrainingapp</item>
     <item>org.libraryforall.fileserveapp</item>
     <item>org.sil.bloom.reader</item>
