Add new Reader app and some third-party apps to whitelist

--- a/au.org.libraryforall.launcher.main/src/main/res/values/strings.xml
+++ b/au.org.libraryforall.launcher.main/src/main/res/values/strings.xml
@@ -25,6 +25,10 @@
     <item>org.libraryforall.lfatrainingapp</item>
     <item>org.libraryforall.fileserveapp</item>
     <item>org.sil.bloom.reader</item>
+    <item>net.gcompris.full</item>
+    <item>org.scratch</item>
+    <item>org.scratchjr.android</item>
+    <item>org.libraryforall.reader</item>
   </string-array>
   <string name="launcherTitleLocked">Select An Application</string>
   <string name="launcherTitleUnlocked">Unlocked Application List</string>
