Add new Reader app to Inclusiv versions whitelist

--- a/au.org.libraryforall.launcher.inclusiv/src/main/res/values/strings.xml
+++ b/au.org.libraryforall.launcher.inclusiv/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
   <string-array name="launcherPackageWhitelist">
     <item>au.org.libraryforall.reader.offline</item>
     <item>au.org.libraryforall.reader</item>
+    <item>org.libraryforall.reader</item>
     <item>com.aofl.readingiq.google</item>
     <item>one.lfa.android.grande</item>
     <item>one.lfa.android.laos</item>
