Add the Ukraine Updater to the whitelist of the main app

--- a/au.org.libraryforall.launcher.main/src/main/res/values/strings.xml
+++ b/au.org.libraryforall.launcher.main/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <item>au.org.libraryforall.reader</item>
     <item>org.libraryforall.reader</item>
     <item>au.org.libraryforall.updater.app</item>
+    <item>au.org.libraryforall.updater.ukraine</item>
     <item>one.lfa.android.grande</item>
     <item>one.lfa.android.laos</item>
     <item>one.lfa.android.timor</item>
