--- a/au.org.libraryforall.launcher.main/src/main/res/values/strings.xml
+++ b/au.org.libraryforall.launcher.main/src/main/res/values/strings.xml
@@ -6,7 +6,9 @@
     <item>au.org.libraryforall.feedthemonster.english</item>
     <item>au.org.libraryforall.reader.offline</item>
     <item>au.org.libraryforall.reader</item>
+    <item>org.libraryforall.reader</item>
     <item>au.org.libraryforall.updater.app</item>
+    <item>au.org.libraryforall.updater.ukraine</item>
     <item>one.lfa.android.grande</item>
     <item>one.lfa.android.laos</item>
     <item>one.lfa.android.timor</item>
@@ -25,6 +27,9 @@
     <item>org.libraryforall.lfatrainingapp</item>
     <item>org.libraryforall.fileserveapp</item>
     <item>org.sil.bloom.reader</item>
+    <item>net.gcompris.full</item>
+    <item>org.scratch</item>
+    <item>org.scratchjr.android</item>
   </string-array>
   <string name="launcherTitleLocked">Select An Application</string>
   <string name="launcherTitleUnlocked">Unlocked Application List</string>
