--- a/au.org.libraryforall.launcher.ukraine/src/main/res/values/strings.xml
+++ b/au.org.libraryforall.launcher.ukraine/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
     <item>com.android.chrome</item>
     <item>com.google.android.apps.translate</item>
     <item>com.google.android.calculator</item>
-    <item>com.google.android.calculator2</item>
+    <item>com.android.calculator2</item>
     <item>uk.sci.edtech.assesment</item>
   </string-array>
   <string name="launcherTitleLocked">Виберіть програму</string>
