Add whitelist for new offline demo reader.

--- a/au.org.libraryforall.launcher.main/src/main/res/values/strings.xml
+++ b/au.org.libraryforall.launcher.main/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <item>org.libraryforall.reader</item>
     <item>au.org.libraryforall.updater.app</item>
     <item>au.org.libraryforall.updater.ukraine</item>
+    <item>one.lfa.android.app.demo</item>
     <item>one.lfa.android.grande</item>
     <item>one.lfa.android.laos</item>
     <item>one.lfa.android.timor</item>
