--- a/au.org.libraryforall.launcher.ukraine/src/main/res/values/strings.xml
+++ b/au.org.libraryforall.launcher.ukraine/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <item>org.libraryforall.reader</item>
     <item>au.org.libraryforall.updater.ukraine</item>
     <item>one.lfa.android.grande</item>
+    <item>org.libraryforall.elevate.esol</item>
     <item>org.libraryforall.lfateacherdashboard</item>
     <item>org.libraryforall.lfastudentdashboard</item>
     <item>org.libraryforall.lfatrainingapp</item>
