feat: whitelist Elevate ESOL offline

--- a/au.org.libraryforall.launcher.main/src/main/res/values/strings.xml
+++ b/au.org.libraryforall.launcher.main/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <item>one.lfa.android.app.vietnam</item>
     <item>org.libraryforall.accountsconverter</item>
     <item>org.libraryforall.elevate.esol</item>
+    <item>org.libraryforall.elevate.esol.offline</item>
     <item>org.libraryforall.lfateacherdashboard</item>
     <item>org.libraryforall.lfateacherdashboard.vietnam</item>
     <item>org.libraryforall.lfastudentdashboard</item>
