--- a/au.org.libraryforall.launcher.ukraine/src/main/res/values/strings.xml
+++ b/au.org.libraryforall.launcher.ukraine/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <item>au.org.libraryforall.updater.ukraine</item>
     <item>one.lfa.android.grande</item>
     <item>org.libraryforall.elevate.esol</item>
+    <item>org.libraryforall.elevate.esol.offline</item>
     <item>org.libraryforall.lfateacherdashboard</item>
     <item>org.libraryforall.lfastudentdashboard</item>
     <item>org.libraryforall.lfatrainingapp</item>
